--- a/dev/deployment.yaml
+++ b/dev/deployment.yaml
@@ -14,6 +14,7 @@ spec:
     spec:
       containers:
       - name: myapp
-        image: nginx:latest
+        #image: nginx:latest
+        image: nginx:1.22.0
         ports:
         - containerPort: 80
