--- a/application.yaml
+++ b/application.yaml
@@ -7,6 +7,8 @@ spec:
   project: default
 
   source:
+    directory:
+      recurse: true
     repoURL: https://github.com/charnet1019/argocd-lab.git
     targetRevision: HEAD
     path: dev
